name:                pathwalk
version:             0.1.0.0
synopsis:            Path walking utilities for Haskell programs
-- description:         
license:             PublicDomain
license-file:        LICENSE
author:              Christine Dodrill
maintainer:          xena@yolo-swag.com
-- copyright:           
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Within.PathWalk
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7, directory >=1.2 && <1.3, filepath >=1.3 && <1.4
  hs-source-dirs:      src
  default-language:    Haskell2010